--- a/src/app/components/pokemon-game/pokedex/pokedex.component.less
+++ b/src/app/components/pokemon-game/pokedex/pokedex.component.less
@@ -1,20 +1,14 @@
 .pokedex-container {
   display: flex;
-  // justify-content: center;
-  // align-items: flex-start;
   flex-wrap: wrap;
-  // padding: 20px;
-  // gap: 10px;
+  justify-content: center;
   width: 100%;
   height: 100%;
 
   .left-pokedex {
-    display: flex;
-    // justify-content: center;
-    // align-items: center;
     width: 30%;
-    height: 100%;
-    min-width: 300px;
+    // height: 100%;
+    min-width: 400px;
     max-width: 500px;
   }
 
@@ -24,15 +18,12 @@
     // align-items: center;
     padding-top: 100px;
     width: 70%;
-    height: 100%;
+    // height: 100%;
     min-width: 500px;
     max-width: 1200px;
     padding-left: 50px;
 
     .right-poke-ball-div {
-      // display: flex;
-      // justify-content: center;
-      // align-items: center;
       height: 700px;
       max-width: 90%;
     }
