--- a/src/app/components/pokemon-game/recharge-history/recharge-history.component.less
+++ b/src/app/components/pokemon-game/recharge-history/recharge-history.component.less
@@ -1,5 +1,5 @@
 .timeline_content {
-  max-width: 100%;
+  width: 100%;
   max-height: 700px;
   padding: 20px;
   background-color: white;
