--- a/src/app/components/user/user-info/user-info.component.less
+++ b/src/app/components/user/user-info/user-info.component.less
@@ -1,25 +1,26 @@
 .user-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  // justify-content: center;
+  // align-items: center;
   min-width: 300px;
   gap: 40px;
-}
+  margin-left: 50px;
 
-.user-info-div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 75%;
-}
+  .user-info-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
 
-.user-foto-div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 90%;
-  margin: 5px;
+  .user-foto-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 90%;
+    margin: 5px;
+  }
 }
 
 :host ::ng-deep .ant-descriptions-bordered {
