--- a/src/app/layout/main-layout/main-layout.component.less
+++ b/src/app/layout/main-layout/main-layout.component.less
@@ -17,5 +17,6 @@
     flex: 1;
     width: 100%;
     max-width: 1700px;
+    overflow-y: auto;
   }
 }
