--- a/src/app/shared/base-components/timeline/timeline.component.less
+++ b/src/app/shared/base-components/timeline/timeline.component.less
@@ -13,7 +13,7 @@
   max-width: 100%;
   max-height: 700px;
   padding: 20px;
-  margin: 5px 5px;
+  margin: 5px;
 }
 
 .time-class {
